[package]
name = "ngrammatic"
version = "0.4.0"
authors = ["Will Page <compenguy@gmail.com>"]
description = "Character-oriented ngram generator and fuzzy matching library."
homepage = "https://github.com/compenguy/ngrammatic"
repository = "https://github.com/compenguy/ngrammatic"
documentation = "https://docs.rs/ngrammatic"
readme = "README.md"
categories = ["text-processing"]
keywords = ["fuzzy", "ngrams", "shingles"]
license = "MIT"
edition = "2021"

[lib]
name = "ngrammatic"

[dependencies]
mem_dbg = { git = "https://github.com/LucaCappelletti94/mem_dbg-rs.git", branch = "main" }

[package.metadata]
msrv = "1.27.2"
